--- a/scpstats.csproj
+++ b/scpstats.csproj
@@ -88,8 +88,9 @@
     <Compile Include="Config.cs" />
     <Compile Include="Event Handlers\EventHandler.cs" />
     <Compile Include="Helpers\CryptoHelper.cs" />
-    <Compile Include="Helpers\TokenManager.cs" />
+    <Compile Include="Helpers\VerificationManager.cs" />
     <Compile Include="Killlogger.cs" />
+    <Compile Include="LoaderMessages.cs" />
     <Compile Include="PlayerStatsTracker.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -97,12 +98,19 @@
     <Compile Include="Websender.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="DotNetEnv">
+      <Version>3.1.1</Version>
+    </PackageReference>
     <PackageReference Include="ExMod.Exiled">
-      <Version>9.6.0-beta8</Version>
+      <Version>9.6.0</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.IO.FileSystem">
+      <Version>4.3.0</Version>
+    </PackageReference>
     <PackageReference Include="System.Text.Json">
-      <Version>9.0.4</Version>
+      <Version>9.0.5</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
