--- a/scpstats.csproj
+++ b/scpstats.csproj
@@ -85,6 +85,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AutoUpdater.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Event Handlers\EventHandler.cs" />
     <Compile Include="Helpers\CryptoHelper.cs" />
