--- a/scpstats.csproj
+++ b/scpstats.csproj
@@ -55,15 +55,27 @@
       <HintPath>D:\PluginAPI\plugins\4000\dependencies\0Harmony.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp-firstpass">
-      <HintPath>D:\SCPL-SL\SCPSL_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
+      <HintPath>..\..\..\Downloads\Dev\Assembly-CSharp-firstpass.dll</HintPath>
     </Reference>
     <Reference Include="Mirror">
-      <HintPath>D:\PluginAPI\plugins\4000\dependencies\Mirror.dll</HintPath>
+      <HintPath>..\..\..\Downloads\Dev\Mirror.dll</HintPath>
+    </Reference>
+    <Reference Include="Mirror.Components">
+      <HintPath>..\..\..\Downloads\Dev\Mirror.Components.dll</HintPath>
+    </Reference>
+    <Reference Include="netstandard">
+      <HintPath>..\..\..\Downloads\Dev\netstandard.dll</HintPath>
+    </Reference>
+    <Reference Include="PluginAPI">
+      <HintPath>..\..\..\Downloads\Dev\PluginAPI.dll</HintPath>
     </Reference>
     <Reference Include="Pooling">
-      <HintPath>D:\PluginAPI\plugins\4000\dependencies\Pooling.dll</HintPath>
+      <HintPath>..\..\..\Downloads\Dev\Pooling.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations">
+      <HintPath>..\..\..\Downloads\Dev\System.ComponentModel.DataAnnotations.dll</HintPath>
+    </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -72,16 +84,16 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine">
-      <HintPath>D:\PluginAPI\plugins\4000\dependencies\UnityEngine.dll</HintPath>
+      <HintPath>..\..\..\Downloads\Dev\UnityEngine.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
-      <HintPath>D:\PluginAPI\plugins\4000\dependencies\UnityEngine.CoreModule.dll</HintPath>
+      <HintPath>..\..\..\Downloads\Dev\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.Physics2DModule">
-      <HintPath>D:\PluginAPI\plugins\4000\dependencies\UnityEngine.Physics2DModule.dll</HintPath>
+      <HintPath>..\..\..\Downloads\Dev\UnityEngine.Physics2DModule.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.PhysicsModule">
-      <HintPath>D:\PluginAPI\plugins\4000\dependencies\UnityEngine.PhysicsModule.dll</HintPath>
+      <HintPath>..\..\..\Downloads\Dev\UnityEngine.PhysicsModule.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
